fix: mobile width overflow

--- a/components/home/about-section/about-section.module.scss
+++ b/components/home/about-section/about-section.module.scss
@@ -5,6 +5,7 @@
     @apply flex-col;
     @apply items-center;
     @apply justify-center;
+    @apply px-6;
   }
   &__text-content {
     @apply text-center;
